[add] folder pages
 # other changes
 * [add] checkbox component
 * [add] taskInfo component
 * [add] taskList component
 * [add] taskListItem component
 * [add] state in pageContent

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,10 +1,10 @@
-.header {
+.Header {
   background: rgba(31, 34, 39, 1);
   display: flex;
   align-items: flex-start;
   height: 64px;
 
-  .logo {
+  .Logo {
     padding: 20px 0 20px 24px;
   }
 }
