--- a/src/pages/taskList/TaskListItem/task-list-item.scss
+++ b/src/pages/taskList/TaskListItem/task-list-item.scss
@@ -2,11 +2,15 @@
   background: rgba(35, 38, 44, 1);
   width: 420px;
   height: 228px;
-  border: 1px solid #383B41;
   border-radius: 20px;
   margin: 24px;
   display: flex;
   align-content: center;
   justify-content: center;
   flex-direction: column;
+  cursor: pointer;
+
+  &.Active {
+    border: 2px solid #383B41;
+  }
 }
