[add] task create form
[add] todo create form
[add] delete button in task
[add] delete button in todo

--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -18,4 +18,15 @@
     display: flex;
     cursor: pointer;
   }
+
+  .IconContainer {
+    display: flex;
+    justify-content: flex-end;
+    width: 60px;
+
+    .remove {
+      cursor: pointer;
+      color: white;
+    }
+  }
 }
