--- a/src/components/task-info/task-info.models.scss
+++ b/src/components/task-info/task-info.models.scss
@@ -19,6 +19,7 @@
     font-weight: bold;
     font-size: 24px;
     line-height: 36px;
+    text-decoration: none;
 
     color: #F4F6FA;
   }
@@ -28,6 +29,7 @@
     font-weight: normal;
     font-size: 12px;
     line-height: 18px;
+    text-decoration: none;
 
     color: #F4F6FA;
     opacity: 0.5;
